--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "prisma": "^5.2.0"
