--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@mantine/carousel": "^6.0.20",
     "@prisma/client": "^5.2.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.0-rc12",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
