--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@mantine/carousel": "^6.0.20",
     "@prisma/client": "^5.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
