--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/carousel": "^6.0.20",
     "@prisma/client": "^5.2.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
