--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@mantine/carousel": "^6.0.20",
     "@prisma/client": "^5.2.0",
@@ -20,10 +22,12 @@
     "embla-carousel-react": "^7.1.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
