--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-tooltip": "^5.21.5",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3"
