--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@mantine/carousel": "^6.0.20",
     "@prisma/client": "^5.2.0",
+    "@splidejs/react-splide": "^0.7.12",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
